--- a/src/app/pages/note-list/note-list.component.scss
+++ b/src/app/pages/note-list/note-list.component.scss
@@ -1,16 +1,29 @@
+@import "../../../main-styles.scss";
 .main-container {
   display: flex;
   flex-direction: column;
   max-width: 500px;
   margin: auto;
-  padding: 50px;
+  padding-top: 50px;
 }
 
 .notes-list {
   margin-top: 35px;
+  margin-bottom: 70px;
 }
 
 app-note-card {
   display: block;
   margin-bottom: 25px;
+}
+
+.floating-add-button {
+  position: fixed;
+  width: 500px;
+  bottom: 10px;
+  width: 500px;
+  border-radius: 0;
+  box-shadow: 0px 0px 15px 5px rgba($purple, 0.2);
+  height: 50px;
+  font-size: 24px;
 }
